<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NPC 포장 scanner</string>
     <string name="barcode_name">Barcode Scan</string>
    <string name="but_start">Single Scan</string>
    <string name="but_stop">스캔\n중지</string>
    <string name="but_close">Close</string>
    <string name="but_repeat">스캔\n시작</string>
    <string name="but_clear">작업\n초기화</string>
    <string name="btn_undo">이전 작업\n삭제</string>
    <string name="btn_send">완료 및\n전송</string>
    <string name="dialog_title">Content</string>
    <string name="spinner">Scan key choose</string>
    <string name="export_rsb">출고(국내)</string>
    
    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>

    <string name="but_touch">Touch</string>
    
        <!-- exit -->
         <string name="key_test_back_title">Remind</string>
    <string name="action_exit_title">Exit</string>
    <string name="action_exit_content">Whether out of the current application</string>
    <string name="action_exit_sure">Sure</string>
    <string name="action_exit_cancel">Cancel</string>
    <string name="action_dialog_setting_config">Please check the "Enable Keyreport Scan" and "
        Enable Keyreport Scan with warning tone" of Accessibility</string>
    <string name="action_dialog_setting_config_sure_go">Go to set</string>
    <string name="scan_time">Scanning times：</string>

</resources>