<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:keepScreenOn="true">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:keepScreenOn="true"
		>

		<RelativeLayout
			android:background="@color/black"
			android:layout_width="match_parent"
			android:layout_height="350dp">

			<me.dm7.barcodescanner.zxing.ZXingScannerView
				android:id="@+id/barcode_scanner"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="5dp"
				android:visibility="invisible"></me.dm7.barcodescanner.zxing.ZXingScannerView>
			<TextView
				android:layout_alignParentBottom="true"
				android:layout_gravity="center"
				android:gravity="center"
				android:textColor="#ffffff"
				android:id="@+id/tv_count"
				android:textSize="25sp"
				android:layout_weight="5"
				android:text="0"
				android:layout_width="match_parent"
				android:layout_height="50dp" />
		</RelativeLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="40dp">
				<TextView
					android:textSize="16sp"
					android:text="&#9632;"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="40dp" />
				<TextView
					android:textSize="18sp"
					android:layout_marginLeft="5dp"
					android:text=" Date "
					android:gravity="center_vertical"
					android:layout_width="120dp"
					android:layout_height="40dp" />
				<TextView
					android:textSize="18sp"
					android:layout_marginLeft="5dp"
					android:text=": "
					android:gravity="center_vertical"
					android:layout_width="wrap_content"
					android:layout_height="40dp" />
				<TextView
					android:id="@+id/tv_date"
					android:textSize="18sp"
					android:text="1234"
					android:gravity="center"
					android:layout_width="match_parent"
					android:layout_height="40dp" />
			</LinearLayout>
			<LinearLayout
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_width="match_parent"
				android:layout_height="40dp">
				<TextView
					android:textSize="16sp"
					android:text="&#9632;"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="40dp" />
				<TextView
					android:textSize="18sp"
					android:layout_marginLeft="5dp"
					android:text=" Company "
					android:gravity="center_vertical"
					android:layout_width="120dp"
					android:layout_height="40dp" />
				<TextView
					android:textSize="18sp"
					android:layout_marginLeft="5dp"
					android:text=": "
					android:gravity="center_vertical"
					android:layout_width="wrap_content"
					android:layout_height="40dp" />
				<Spinner
					android:clickable="false"
					android:background="#D5D8DC"
					android:popupBackground="#D5D8DC"
					android:id="@+id/target_numb2"
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_marginLeft="4dp"
					android:layout_toRightOf="@+id/textviewScannumber2"
					android:dropDownWidth="match_parent"
					android:paddingRight="4dp" />

			</LinearLayout>
			<LinearLayout
				android:layout_marginTop="30dp"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<Button
					android:layout_marginLeft="5dp"
					android:id="@+id/manual_input_data"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="Manual"
					android:textSize="20sp" />
			</LinearLayout>

		</LinearLayout>
		<TextView
			android:visibility="gone"
			android:id="@+id/tv_cound"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<LinearLayout
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<ScrollView
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:layout_weight="1">

				<EditText
					android:textSize="15sp"
					android:id="@+id/mReception"
					android:layout_width="fill_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@null"
					android:enabled="false"
					android:textColor="#FFFFFF"
					android:gravity="top"
					android:hint="결과 창"
					android:scrollbarStyle="insideInset"
					android:scrollbars="vertical"></EditText>
			</ScrollView>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/linearLayout1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:orientation="horizontal">

		</LinearLayout>

		<LinearLayout
			android:id="@+id/linearLayout1"
			android:layout_width="match_parent"
			android:layout_height="94dp"
			android:layout_gravity="right"
			android:gravity="bottom"
			android:orientation="horizontal"
			tools:ignore="DuplicateIds">

			<ToggleButton
				android:checked="false"
				android:id="@+id/button_repeat"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="fill"
				android:layout_weight="1"
				android:textOff="@string/but_repeat"
				android:textOn="@string/but_stop" />

			<Button
				android:visibility="gone"
				android:id="@+id/buttonscan"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/but_start" />

			<ToggleButton
				android:visibility="gone"
				android:id="@+id/butSound"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="fill"
				android:layout_weight="1"
				android:textOff="Sound OFF"
				android:textOn="Sound ON" />

			<ToggleButton
				android:visibility="gone"
				android:id="@+id/butVibrate"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_gravity="fill"
				android:layout_weight="1"
				android:textOff="Vibrate OFF"
				android:textOn="Vibrate ON" />

			<Button
				android:id="@+id/btnClear"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/but_clear" />
			<Button
				android:id="@+id/button_undo"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/btn_undo" />
			<Button
				android:id="@+id/button_send"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/btn_send" />

		</LinearLayout>
	</LinearLayout>

	<include
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		layout="@layout/manual_pop_up"/>
</RelativeLayout>
