<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#C2DEF3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:id="@+id/tv_title"
            android:textSize="25sp"
            android:text="대 한 포 장"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:background="@color/black"
            android:textSize="25sp"
            android:text="0"
            android:layout_width="2dp"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:id="@+id/tv_count"
            android:textSize="25sp"
            android:layout_weight="3"
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; Date : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_date"
                android:textSize="20sp"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; C/T_no : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="text"
                android:singleLine="true"
                android:nextFocusForward="@id/seal_no"
                android:imeOptions="actionNext"
                android:id="@+id/container_no"
                android:maxLength="11"
                android:maxLines="1"
                android:textSize="20sp"
                android:gravity="center"
                android:width="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; C/T_Seal : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:singleLine="true"
                android:nextFocusForward="@id/tv_serial_no"
                android:imeOptions="actionNext"
                android:id="@+id/seal_no"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="20sp"
                android:gravity="center"
                android:width="130dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; Order_no : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_order_no"
                android:textSize="20sp"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; Case_no : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_case_no"
                android:textSize="20sp"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="&#9632; RSB Serial_no : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_serial_no"
                android:textSize="20sp"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_cound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:textSize="20sp"
            android:id="@+id/EditTextReception"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:enabled="false"
            android:textColor="#FFFFFF"
            android:gravity="top"
            android:hint="결과 창"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"></EditText>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <ToggleButton
            android:id="@+id/button_repeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="@string/but_repeat"
            android:textOn="@string/but_stop" />

        <Button
            android:visibility="gone"
            android:id="@+id/buttonscan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_start" />

        <ToggleButton
            android:visibility="gone"
            android:id="@+id/butSound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="Sound OFF"
            android:textOn="Sound ON" />

        <ToggleButton
            android:visibility="gone"
            android:id="@+id/butVibrate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="Vibrate OFF"
            android:textOn="Vibrate ON" />

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_clear" />
        <Button
            android:id="@+id/button_undo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_undo" />
        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_send" />

    </LinearLayout>
</LinearLayout>
